@@ -1,3 +1,10 @@
+2010-07-27  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
+	* top.c (input_from_terminal_p): Return 0 on BATCH_FLAG.
+	* utils.c (defaulted_query): Do not explicitly check for BATCH_FLAG.
+	(fputs_maybe_filtered): Do not do filtering also on
+	! INPUT_FROM_TERMINAL_P.
+
 2010-07-27  Thiago Jung Bauermann  <bauerman@br.ibm.com>
 
 	* ppc-linux-nat.c (store_vsx_register): Use PTRACE_GETVSXREGS to get
